--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
   },
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
+    "@vueuse/core": "^13.0.0",
+    "@vueuse/motion": "^3.0.3",
     "lucide-vue-next": "^0.475.0",
-    "vue": "^3.3.4"
+    "vue": "^3.3.4",
+    "vue3-carousel": "^0.15.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.2.1",
