--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@vueuse/motion": "^3.0.3",
     "lucide-vue-next": "^0.475.0",
     "vue": "^3.3.4",
+    "vue-recaptcha-v3": "^2.0.1",
     "vue3-carousel": "^0.15.0"
   },
   "devDependencies": {
